// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Dropdown /> renders the Dropdown with one option 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent url(chevron-down.svg) no-repeat calc(100% - 13px) center;
  background-size: 13px;
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 8px 32px 8px 16px;
  font-size: 20px;
  height: 46px;
  min-width: 100px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

<select
  class="c0"
>
  <option
    class=""
    value="first"
  >
    First value
  </option>
</select>
`;

exports[`<Dropdown /> renders the Dropdown with options 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent url(chevron-down.svg) no-repeat calc(100% - 13px) center;
  background-size: 13px;
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 8px 32px 8px 16px;
  height: 46px;
  min-width: 100px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

<select
  class="c0"
>
  <option
    class=""
    value="first"
  >
    First value
  </option>
  <option
    class=""
    value="second"
  >
    Second value
  </option>
</select>
`;

exports[`<Dropdown /> renders the Dropdown with options and a default selected value 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent url(chevron-down.svg) no-repeat calc(100% - 13px) center;
  background-size: 13px;
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 8px 32px 8px 16px;
  height: 46px;
  min-width: 100px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

<select
  class="c0"
>
  <option
    class=""
    value="otherValue"
  >
    Other Value
  </option>
  <option
    class=""
    selected=""
    value="defaultValue"
  >
    Default value to be selected
  </option>
</select>
`;

exports[`<Dropdown /> renders the Dropdown with options passed through an array.map 1`] = `
.c0 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background: transparent url(chevron-down.svg) no-repeat calc(100% - 13px) center;
  background-size: 13px;
  border: 2px solid #D6D7DE;
  border-radius: 4px;
  padding: 8px 32px 8px 16px;
  height: 46px;
  min-width: 100px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.c0:focus {
  outline-width: 0;
  border: 2px solid #4B3CFA;
  -webkit-transition: border 0.2s;
  transition: border 0.2s;
}

<select
  class="c0"
>
  <option
    class=""
    value=""
  >
    Select a value
  </option>
  <option
    class=""
    value="value1"
  >
    value1
  </option>
  <option
    class=""
    value="value2"
  >
    value2
  </option>
</select>
`;
